<resources>
    <string name="app_name" translatable="false">TrashHack</string>
    <string name="loading">Loading</string>
    <string name="reading_hash">Reading Hash</string>
    <string name="retrieving_role">Retrieving user information</string>
    <string name="changing_layout">Changing layout</string>

    <string name="welcome_back">Welcome back!</string> <!-- translatable="true" -->
    <string name="welcome">Welcome!</string>

    <string name="prompt_surname">Surname</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_patronymic">Patronymic (if available)</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="signup_hint">Don\'t have an account yet?</string>
    <string name="signin_hint">Already have an account?</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="signup_failed">SignUp failed. Please try again.</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="dev_welcome">Welcome to Devs menu</string>
    <string name="org_devs">"Developers</string>
    <string name="refresh">"Refresh</string>
    <string name="org_orgs">"Organizations</string>


    <string name="logout">"Log out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_dev_control_dev">DevControlDev</string>
    <string name="action_settings">Settings</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="registerdev">Register new developer</string>
    <string name="title_activity_login" translatable="false">Log in</string>


</resources>